# toolkit-shared-components

./: .env.example  .gitignore  CONTRIBUTING.md  PRE_RELEASE_CHECKLIST.md  README.md  deployment.md  test.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: publish.yml  release-testpypi.yml  test.yml
dev/: README.md
dev/scripts/: run_python_package_tests.py
docs/: PUBLISHING.md  build-steps.md  gaik-toolkit-cheatsheet.md  overview.md  overview.md.md
examples/: 01_getting_started.py  02_pydantic_schemas.py  03_real_world_use_cases.py  README.md  demo_anthropic.py  demo_vision_parser.py  demo_vision_simple.py  test_gaik_installation.py  test_real_extraction.py
examples/extract/: extraction_example_1.py  extraction_example_2.py
examples/parsers/: demo_vision_parser.py
examples/vision/: README.md
gaik-py/: README.md  build-steps.md  publish-testpypi.ps1  pyproject.toml  requirements.txt
gaik-py/scripts/: README.md  verify_installation.py
gaik-py/src/gaik/: __init__.py
gaik-py/src/gaik/audio/: whisper.py
gaik-py/src/gaik/extract/: extractor.py
gaik-py/src/gaik/providers/: __init__.py  google.py
gaik-py/src/gaik/schema/: __init__.py  extractor.py  utils.py
gaik-py/tests/: README.md  validate_version.py  verify_installation.py
