[project]
name = "gaik"
version = "0.2.1"
description = "General AI Kit - Reusable AI/ML components for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "GAIK Project" }
]
keywords = ["ai", "ml", "openai", "structured-outputs", "pydantic", "schema", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=2.5.0",
    "pydantic>=2.12.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.1",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://gaik.ai/"
Repository = "https://github.com/GAIK-project/toolkit-shared-components"
Documentation = "https://github.com/GAIK-project/toolkit-shared-components/tree/main/gaik-py"
Issues = "https://github.com/GAIK-project/toolkit-shared-components/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gaik = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
