[project]
name = "gaik"
version = "0.2.14"
description = "General AI Kit - Reusable AI/ML components for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "GAIK Project" }]
keywords = [
    "ai",
    "ml",
    "langchain",
    "openai",
    "anthropic",
    "google",
    "structured-outputs",
    "pydantic",
    "schema",
    "extraction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core runtime requirement shared across all installs
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
# Data extraction with all LLM providers (OpenAI, Anthropic, Google, Azure)
extract = [
    # LangChain core plus every supported chat provider
    "langchain-core>=1.0.3",
    "langchain-openai>=1.0.2",
    "langchain-anthropic>=1.0.1",
    "langchain-google-genai>=3.0.1",
]

# Vision/PDF parsing with OpenAI or Azure OpenAI
vision = [
    # Required to call OpenAI or Azure OpenAI vision endpoints
    "openai>=2.7",
    # Local PDF/image utilities
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

# All features
all = [
    "gaik[extract]",
    "gaik[vision]",
]

# Development tooling for maintainers only (pip install -e ".[dev]")
dev = [
    "ruff>=0.14.1",      # Linter/formatter: ruff check . / ruff format .
    "build>=1.0",        # Package builder: python -m build
    "twine>=4.0",        # PyPI publisher: twine upload dist/*
    "pytest>=8.0",       # Test runner: pytest
    "pytest-cov>=4.1",   # Coverage reports (optional)
    "pytest-mock>=3.12", # Mock fixtures for testing
]

[project.urls]
Homepage = "https://gaik.ai/"
Repository = "https://github.com/GAIK-project/toolkit-shared-components"
Documentation = "https://github.com/GAIK-project/toolkit-shared-components/tree/main/gaik-py"
Issues = "https://github.com/GAIK-project/toolkit-shared-components/issues"

# Build system configuration (not installed, used during `python -m build`)
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Source code location (not installed, directs setuptools behavior)
[tool.setuptools.packages.find]
where = ["src"]

# Include type hints marker file (py.typed included in package)
[tool.setuptools.package-data]
gaik = ["py.typed"]

# Ruff linter/formatter settings (not installed, used when running `ruff check`)
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["scripts"]  # Exclude CI/CD scripts from linting

# Ruff lint rules configuration
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# Pytest test runner configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers"]
